fix padding on modile on tablet, closes #195

--- a/less/app.less
+++ b/less/app.less
@@ -1117,7 +1117,7 @@ h1 + #story-meta { margin-top: -11px; }
 .modal-body-inner{
 	display:table-cell;
 	padding-top: 30px;
-	@media screen and (max-width: @screen-sm) {
+	@media screen and (max-width: 767px) {
 		padding-top:0;
 	}
 }
